# aihomework

./: README.md  main.py  pyproject.toml  sample_house_data.csv
backend/: .env  gui_main.py  main.py  pyproject.toml
backend/dao/: student_dao.py
backend/database/: db.py
backend/dataprocess/: academic_warning_gui.py  data_processor.py  data_processor_new.py  data_processor_old.py
backend/models/: student_models.py
backend/routers/: api.py
backend/services/: warning_service.py  warning_service_old.py
dao/: student_dao.py
database/: db.py
dataprocess/: academic_warning_gui.py  data_processor.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
models/: student_models.py
