[project]
name = "studentwarningsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "mysql-connector-python>=9.3.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
]
